[gd_scene load_steps=5 format=2]

[ext_resource path="res://Enemies/Enemy.gd" type="Script" id=1]
[ext_resource path="res://Collision boxes/HurtBox.tscn" type="PackedScene" id=2]
[ext_resource path="res://Enemies/EnemyStats.tscn" type="PackedScene" id=3]
[ext_resource path="res://Collision boxes/Hitbox.tscn" type="PackedScene" id=4]

[node name="Enemy" type="KinematicBody2D"]
collision_layer = 0
collision_mask = 2
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]

[node name="Collider" type="CollisionShape2D" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="HurtBox" parent="." instance=ExtResource( 2 )]
collision_layer = 2147483656
collision_mask = 2

[node name="EnemyStats" parent="." instance=ExtResource( 3 )]

[node name="Hitbox" parent="." instance=ExtResource( 4 )]
collision_mask = 4
[connection signal="hit" from="HurtBox" to="." method="_on_HurtBox_hit"]
[connection signal="enemy_died" from="EnemyStats" to="." method="_on_EnemyStats_enemy_died"]
